--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Information on soccer player data for football's top 5 leagues.",
   "main": "lib/index.js",
   "types": "lib",
+  "files": [
+    "src/**/*"
+  ],
   "scripts": {
     "build": "tsc -p .",
     "start": "npm run build; node lib/index.js",
