--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "topfive-api",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "Premier League 🏴󠁧󠁢󠁥󠁮󠁧󠁿 Bundesliga 🇩🇪 Serie A 🇮🇹 Ligue 1 🇫🇷 La Liga 🇪🇸 \n All the clubs, all the players, automatically updated every transfer window.",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
